maven fix by Mathew_Forever

--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,25 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>laba-6</artifactId>
-        <groupId>org.simaforest</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>client</artifactId>
+    <groupId>org.simaforest</groupId>
+    <artifactId>laba-6</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <modules>
+        <module>
+            client
+        </module>
+        <module>
+            server
+        </module>
+    </modules>
+    
 </project>
