update: Chacge dirrectory and some javadocs

--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,9 @@
     </properties>
 
     <modules>
-        <module>
-            client
-        </module>
-        <module>
-            server
-        </module>
+        <module>client</module>
+        <module>server</module>
+        <module>charon</module>
     </modules>
     
 </project>
