--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -16,4 +16,12 @@
         <maven.compiler.target>17</maven.compiler.target>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <artifactId>charon</artifactId>
+            <groupId>org.simaforest</groupId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
+
 </project>
